--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,13 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Success!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+    <div class="toast-header bg-black text-white border-success">
+        <strong class="mr-auto text-success">Success!</strong>
+        <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="toast-body bg-black text-white">
         <div class="row">
             <div class="col">
                 {{ message }}
@@ -15,12 +15,12 @@
             </div>
         </div>
         {% if grand_total %}
-            <p class="logo-font bg-white text-black py-1">My Basket ({{ product_count }})</p>
+            <p class="logo-font bg-black text-success py-1">My Basket ({{ product_count }})</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col-3 my-1">
-                            <img class="w-100" src="{{ item.product.image.url }}">
+                            <img class="w-100 rounded" src="{{ item.product.image.url }}" alt="Product Image">
                         </div>
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
@@ -32,16 +32,16 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <strong><p class="mt-3 mb-1 text-black">
+                    <strong><p class="mt-3 mb-1 text-white">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
                         <span class="float-right">£{{ total|floatformat:2 }}</span>
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
-                        <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
+                        <p class="mb-0 p-2 bg-danger shadow-sm text-white text-center rounded">
                             Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'view_basket' %}" class="btn btn-black btn-block rounded-0">
+                    <a href="{% url 'view_basket' %}" class="btn btn-danger btn-block rounded-0">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
