--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -163,6 +163,10 @@ button.btn-red:hover {
     padding: 0.5rem;
 }
 
+.navbar {
+  background-color: black;
+}
+
 /* Hover effect for the navbar-toggler */
 .navbar-toggler:hover {
     background-color: rgba(255, 255, 255, 0.1);
@@ -186,6 +190,13 @@ button.btn-red:hover {
     background-color: #ff0000;
     color: #fff;
 }
+
+.menu-container {
+    margin-top: 20px;
+    background-color: #222;
+    padding: 15px;
+    border-radius: 5px;
+  }
 
 /* Footer (Optional) */
 footer {
