--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -3,7 +3,7 @@
 
 /*-------- Misc --------*/
 body {
-    background: url('/media/red-lightning.jpg') no-repeat center center fixed;
+    background: url('/media/red-lightning.jpg') no-repeat center center fixed !important;
     background-size: cover;
     color: #ffffff;
     font-family: 'Lato';
@@ -190,8 +190,8 @@ button.btn-red:hover {
     background-color: #222;
     padding: 15px;
     border-radius: 5px;
-  }
 }
+
 
 
 
