--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,7 +59,7 @@ header {
 /* ------ Main ------*/
 
 body {
-    background-color: url('/media/red-lightning.jpg') no-repeat center center fixed; 
+    background: url('/media/red-lightning.jpg') no-repeat center center fixed; 
     color: #fff; 
     
 }
